@@ -664,5 +664,37 @@ namespace MySql.Web.Tests
             MembershipUser u = provider.GetUser("foo", false);
             string newpw = provider.ResetPassword("foo", null);
         }
+
+        /// <summary>
+        /// Bug #59438	setting Membership.ApplicationName has no effect
+        /// </summary>
+        [Test]
+        public void ChangeAppName()
+        {
+            provider = new MySQLMembershipProvider();
+            NameValueCollection config = new NameValueCollection();
+            config.Add("connectionStringName", "LocalMySqlServer");
+            config.Add("applicationName", "/");
+            config.Add("passwordStrengthRegularExpression", "bar.*");
+            config.Add("passwordFormat", "Clear");
+            provider.Initialize(null, config);
+            MembershipCreateStatus status;
+            provider.CreateUser("foo", "bar!bar", null, null, null, true, null, out status);
+            Assert.IsTrue(status == MembershipCreateStatus.Success);
+
+            MySQLMembershipProvider provider2 = new MySQLMembershipProvider();
+            NameValueCollection config2 = new NameValueCollection();
+            config2.Add("connectionStringName", "LocalMySqlServer");
+            config2.Add("applicationName", "/myapp");
+            config2.Add("passwordStrengthRegularExpression", "foo.*");
+            config2.Add("passwordFormat", "Clear");
+            provider2.Initialize(null, config2);
+            provider2.CreateUser("foo2", "foo!foo", null, null, null, true, null, out status);
+            Assert.IsTrue(status == MembershipCreateStatus.Success);
+
+            provider.ApplicationName = "/myapp";
+            Assert.IsFalse(provider.ValidateUser("foo", "bar!bar"));
+            Assert.IsTrue(provider.ValidateUser("foo2", "foo!foo"));
+        }
     }
 }
